--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parse": "^0.1.0",
     "cookie-parse": "^0.4.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.5.2",
     "shortid": "^2.2.16"
